--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -5,8 +5,8 @@
 @charset "utf-8";
 
 // HLB brand colors
-$primary: #FF6600;
-$secondary: #C1571D;
+$primary: #FB6500;
+$secondary: #000000;
 $secondary-hover: lighten($secondary, 10%);
 
 $media-color-one: #49759a;
